[package]
name = "dobustu-precomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_helper_v2 = { path = "opti_game_lib" }
rand = "0.9.0-alpha.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "default", "sync", "rt", "macros", "time"] }